added basic CSS to HTML elements

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -4,31 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Burger</title>
+    <link rel="stylesheet" href="./styleFood.css">
   </head>
   <body>
-    <h1>Burger</h1>
+    <h1 class="foodName">Burger</h1>
     <img
       src="../photos/burger.jpg"
       alt="burger"
-      class="burger"
+      class="foodPic"
       width="300"
       height="200"
     />
-    <p>
+    <p class="description">
       Introducing the ultimate burger experience – a tantalizing symphony of
       flavor and freshness that will leave your taste buds dancing with delight.
-      Our signature burger starts with a juicy, flame-grilled beef patty, cooked
+      Our signature burger starts with a juicy, flame-grilled patty, cooked
       to perfection and nestled between two lightly toasted brioche buns. But
       that's just the beginning.
     </p>
-    <h3>Ingredients</h3>
+    <h3 class="subHeadings">Ingredients</h3>
     <ul>
       <li>Bun</li>
-      <li>Veg Patty</li>
+      <li>Patty</li>
       <li>Lettuce</li>
       <li>Cheese Slice</li>
     </ul>
-    <h3>Steps to Make the Dish</h3>
+    <h3 class="subHeadings">Steps to Make the Dish</h3>
     <ol>
       <li>
         <strong>Quality Ingredients: </strong>Start with the freshest
