--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -3,31 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Noodles</title>
+    <link rel="stylesheet" href="./styleFood.css">
   </head>
   <body>
-    <h1>Burger</h1>
+    <h1 class="foodName">Noodles</h1>
     <img
-      src="../photos/noodles.jfif"
+      src="../photos/noodles.jpg"
       alt="burger"
-      class="burger"
-      width="300"
-      height="200"
+      class="foodPic"
     />
-    <p>
+    <p class="description">
       Noodles, a culinary delight cherished across cultures, offer a symphony of
       flavors and textures in every tantalizing bite. Crafted from flour, water,
       and sometimes eggs, these versatile strands of goodness come in various
       shapes and sizes, each lending its own unique charm to the dish.
     </p>
-    <h3>Ingredients</h3>
-    <ul>
+    <h3 class="suhHeading">Ingredients</h3>
+    <ul class="ingredients">
       <li>Flour</li>
       <li>Vegetables</li>
       <li>Sauces</li>
       <li>Vinegar</li>
     </ul>
-    <h3>Steps to Make the Dish</h3>
+    <h3 class="subHeading">Steps to Make the Dish</h3>
     <ol>
       <li>
         <strong>Prepare the dough:</strong> Mix flour, salt, and water, then let
