--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -4,30 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pizza</title>
+    <link rel="stylesheet" href="./styleFood.css">
   </head>
   <body>
-    <h1>Pizza</h1>
+    <h1 class="foodName">Pizza</h1>
     <img
-      src="../photos/pizza.jfif"
+      src="../photos/pizza.jpg"
       alt="burger"
-      class="burger"
+      class="foodPic"
       width="300"
       height="200"
     />
-    <p>
+    <p class="description">
       Indulge in the ultimate culinary delight with our signature pizza, crafted
       to perfection with love and expertise. Picture a symphony of flavors
       dancing on a crispy yet tender crust, topped with a vibrant medley of the
       freshest ingredients, and kissed by the warmth of our wood-fired oven.
     </p>
-    <h3>Ingredients</h3>
-    <ul>
+    <h3 class="subHeadings">Ingredients</h3>
+    <ul class="ingredients">
       <li>Pizza Base</li>
       <li>Mozzila Cheese</li>
       <li>Cut Vegetables</li>
       <li>Sauces</li>
     </ul>
-    <h3>Steps to Make the Dish</h3>
+    <h3 class="subHeadings">Steps to Make the Dish</h3>
     <ol>
       <li>
         <strong>Preparation of Dough: </strong>Begin by crafting the perfect
