--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <h2>Dishes</h2>
-    <ul>
+    <ul class="menu">
         <li>
             <a href="./recipes/burger.html">Burger</a>
         </li>
