added padding, Margins to Main Page

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <h2>Dishes</h2>
-    <ul class="menu">
+    <h1 class="mainTitle">Odin Recipes</h1>
+    <h2 class="subheading">Dishes</h2>
+    <ul class="foodMenu">
         <li>
             <a href="./recipes/burger.html">Burger</a>
         </li>
